project/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RIGHT_OP
    RETURN
    DO
    DEFAULT
    FOR
    LEFT_OP
    WHILE
    COLON
    TRUE
    COMMENT
    MAIN
    RPAREN
    NEWLINE
    CASE
    LBIG
    TILDA
    COMMA
    DOT
    INCREMENT
    IF
    ADD_ASSIGN
    RBRACE
    SIZEOF
    SINGLE_QUOTES
    LPAREN
    ANDI
    ELSE
    AND
    LBRACE
    CONDOP
    BREAK
    CONTINUE
    DOUBLE_QUOTES
    NOT
    DECREMENT
    SWITCH
    RBIG
    OR

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> declaration
Rule 4     statement -> exp SEMI_COLON
Rule 5     declaration -> type VARIABLE SEMI_COLON
Rule 6     declaration -> type VARIABLE EQUALS exp SEMI_COLON
Rule 7     type -> INT
Rule 8     type -> FLOAT
Rule 9     type -> CHAR
Rule 10    type -> DOUBLE
Rule 11    type -> VOID
Rule 12    type -> SHORT
Rule 13    type -> LONG
Rule 14    constant -> HEX_INT
Rule 15    constant -> DOT_REAL
Rule 16    constant -> EXP_REAL
Rule 17    constant -> DEC_INT
Rule 18    constant -> CHARACTER
Rule 19    constant -> VARIABLE
Rule 20    exp -> exp ADD exp
Rule 21    exp -> exp MINUS exp
Rule 22    exp -> exp MULT exp
Rule 23    exp -> exp DIV exp
Rule 24    exp -> exp MOD exp
Rule 25    exp -> exp L_OP exp
Rule 26    exp -> exp G_OP exp
Rule 27    exp -> exp LE_OP exp
Rule 28    exp -> exp GE_OP exp
Rule 29    exp -> exp NOTEQUALS exp
Rule 30    exp -> exp EQUALS_OP exp
Rule 31    exp -> exp OR_OP exp
Rule 32    exp -> exp AND_OP exp
Rule 33    exp -> exp MUL_ASSIGN exp
Rule 34    exp -> exp DIV_ASSIGN exp
Rule 35    exp -> exp MOD_ASSIGN exp
Rule 36    exp -> exp AND_ASSIGN exp
Rule 37    exp -> exp SUB_ASSIGN exp
Rule 38    exp -> exp LEFT_ASSIGN exp
Rule 39    exp -> exp RIGHT_ASSIGN exp
Rule 40    exp -> exp XOR_ASSIGN exp
Rule 41    exp -> exp OR_ASSIGN exp
Rule 42    exp -> exp EQUALS exp
Rule 43    exp -> constant
Rule 44    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 20
ADD_ASSIGN           : 
AND                  : 
ANDI                 : 
AND_ASSIGN           : 36
AND_OP               : 32
BREAK                : 
CASE                 : 
CHAR                 : 9
CHARACTER            : 18
COLON                : 
COMMA                : 
COMMENT              : 
CONDOP               : 
CONTINUE             : 
DECREMENT            : 
DEC_INT              : 17
DEFAULT              : 
DIV                  : 23
DIV_ASSIGN           : 34
DO                   : 
DOT                  : 
DOT_REAL             : 15
DOUBLE               : 10
DOUBLE_QUOTES        : 
ELSE                 : 
EQUALS               : 6 42
EQUALS_OP            : 30
EXP_REAL             : 16
FLOAT                : 8
FOR                  : 
GE_OP                : 28
G_OP                 : 26
HEX_INT              : 14
IF                   : 
INCREMENT            : 
INT                  : 7
LBIG                 : 
LBRACE               : 
LEFT_ASSIGN          : 38
LEFT_OP              : 
LE_OP                : 27
LONG                 : 13
LPAREN               : 
L_OP                 : 25
MAIN                 : 
MINUS                : 21
MOD                  : 24
MOD_ASSIGN           : 35
MULT                 : 22
MUL_ASSIGN           : 33
NEWLINE              : 
NOT                  : 
NOTEQUALS            : 29
OR                   : 
OR_ASSIGN            : 41
OR_OP                : 31
RBIG                 : 
RBRACE               : 
RETURN               : 
RIGHT_ASSIGN         : 39
RIGHT_OP             : 
RPAREN               : 
SEMI_COLON           : 4 5 6
SHORT                : 12
SINGLE_QUOTES        : 
SIZEOF               : 
SUB_ASSIGN           : 37
SWITCH               : 
TILDA                : 
TRUE                 : 
VARIABLE             : 5 6 19
VOID                 : 11
WHILE                : 
XOR_ASSIGN           : 40
error                : 

Nonterminals, with rules where they appear

constant             : 43
declaration          : 3
empty                : 
exp                  : 4 6 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42
statement            : 1 2
statements           : 1 0
type                 : 5 6

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . declaration
    (4) statement -> . exp SEMI_COLON
    (5) declaration -> . type VARIABLE SEMI_COLON
    (6) declaration -> . type VARIABLE EQUALS exp SEMI_COLON
    (20) exp -> . exp ADD exp
    (21) exp -> . exp MINUS exp
    (22) exp -> . exp MULT exp
    (23) exp -> . exp DIV exp
    (24) exp -> . exp MOD exp
    (25) exp -> . exp L_OP exp
    (26) exp -> . exp G_OP exp
    (27) exp -> . exp LE_OP exp
    (28) exp -> . exp GE_OP exp
    (29) exp -> . exp NOTEQUALS exp
    (30) exp -> . exp EQUALS_OP exp
    (31) exp -> . exp OR_OP exp
    (32) exp -> . exp AND_OP exp
    (33) exp -> . exp MUL_ASSIGN exp
    (34) exp -> . exp DIV_ASSIGN exp
    (35) exp -> . exp MOD_ASSIGN exp
    (36) exp -> . exp AND_ASSIGN exp
    (37) exp -> . exp SUB_ASSIGN exp
    (38) exp -> . exp LEFT_ASSIGN exp
    (39) exp -> . exp RIGHT_ASSIGN exp
    (40) exp -> . exp XOR_ASSIGN exp
    (41) exp -> . exp OR_ASSIGN exp
    (42) exp -> . exp EQUALS exp
    (43) exp -> . constant
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . CHAR
    (10) type -> . DOUBLE
    (11) type -> . VOID
    (12) type -> . SHORT
    (13) type -> . LONG
    (14) constant -> . HEX_INT
    (15) constant -> . DOT_REAL
    (16) constant -> . EXP_REAL
    (17) constant -> . DEC_INT
    (18) constant -> . CHARACTER
    (19) constant -> . VARIABLE

    INT             shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 5
    DOUBLE          shift and go to state 15
    VOID            shift and go to state 3
    SHORT           shift and go to state 1
    LONG            shift and go to state 19
    HEX_INT         shift and go to state 16
    DOT_REAL        shift and go to state 10
    EXP_REAL        shift and go to state 7
    DEC_INT         shift and go to state 8
    CHARACTER       shift and go to state 4
    VARIABLE        shift and go to state 13

    constant                       shift and go to state 6
    statement                      shift and go to state 9
    exp                            shift and go to state 18
    declaration                    shift and go to state 12
    statements                     shift and go to state 2
    type                           shift and go to state 11

state 1

    (12) type -> SHORT .

    VARIABLE        reduce using rule 12 (type -> SHORT .)


state 2

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . declaration
    (4) statement -> . exp SEMI_COLON
    (5) declaration -> . type VARIABLE SEMI_COLON
    (6) declaration -> . type VARIABLE EQUALS exp SEMI_COLON
    (20) exp -> . exp ADD exp
    (21) exp -> . exp MINUS exp
    (22) exp -> . exp MULT exp
    (23) exp -> . exp DIV exp
    (24) exp -> . exp MOD exp
    (25) exp -> . exp L_OP exp
    (26) exp -> . exp G_OP exp
    (27) exp -> . exp LE_OP exp
    (28) exp -> . exp GE_OP exp
    (29) exp -> . exp NOTEQUALS exp
    (30) exp -> . exp EQUALS_OP exp
    (31) exp -> . exp OR_OP exp
    (32) exp -> . exp AND_OP exp
    (33) exp -> . exp MUL_ASSIGN exp
    (34) exp -> . exp DIV_ASSIGN exp
    (35) exp -> . exp MOD_ASSIGN exp
    (36) exp -> . exp AND_ASSIGN exp
    (37) exp -> . exp SUB_ASSIGN exp
    (38) exp -> . exp LEFT_ASSIGN exp
    (39) exp -> . exp RIGHT_ASSIGN exp
    (40) exp -> . exp XOR_ASSIGN exp
    (41) exp -> . exp OR_ASSIGN exp
    (42) exp -> . exp EQUALS exp
    (43) exp -> . constant
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . CHAR
    (10) type -> . DOUBLE
    (11) type -> . VOID
    (12) type -> . SHORT
    (13) type -> . LONG
    (14) constant -> . HEX_INT
    (15) constant -> . DOT_REAL
    (16) constant -> . EXP_REAL
    (17) constant -> . DEC_INT
    (18) constant -> . CHARACTER
    (19) constant -> . VARIABLE

    INT             shift and go to state 14
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 5
    DOUBLE          shift and go to state 15
    VOID            shift and go to state 3
    SHORT           shift and go to state 1
    LONG            shift and go to state 19
    HEX_INT         shift and go to state 16
    DOT_REAL        shift and go to state 10
    EXP_REAL        shift and go to state 7
    DEC_INT         shift and go to state 8
    CHARACTER       shift and go to state 4
    VARIABLE        shift and go to state 13

    constant                       shift and go to state 6
    statement                      shift and go to state 20
    exp                            shift and go to state 18
    declaration                    shift and go to state 12
    type                           shift and go to state 11

state 3

    (11) type -> VOID .

    VARIABLE        reduce using rule 11 (type -> VOID .)


state 4

    (18) constant -> CHARACTER .

    ADD             reduce using rule 18 (constant -> CHARACTER .)
    MINUS           reduce using rule 18 (constant -> CHARACTER .)
    MULT            reduce using rule 18 (constant -> CHARACTER .)
    DIV             reduce using rule 18 (constant -> CHARACTER .)
    MOD             reduce using rule 18 (constant -> CHARACTER .)
    L_OP            reduce using rule 18 (constant -> CHARACTER .)
    G_OP            reduce using rule 18 (constant -> CHARACTER .)
    LE_OP           reduce using rule 18 (constant -> CHARACTER .)
    GE_OP           reduce using rule 18 (constant -> CHARACTER .)
    NOTEQUALS       reduce using rule 18 (constant -> CHARACTER .)
    EQUALS_OP       reduce using rule 18 (constant -> CHARACTER .)
    OR_OP           reduce using rule 18 (constant -> CHARACTER .)
    AND_OP          reduce using rule 18 (constant -> CHARACTER .)
    MUL_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    DIV_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    MOD_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    AND_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    SUB_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    LEFT_ASSIGN     reduce using rule 18 (constant -> CHARACTER .)
    RIGHT_ASSIGN    reduce using rule 18 (constant -> CHARACTER .)
    XOR_ASSIGN      reduce using rule 18 (constant -> CHARACTER .)
    OR_ASSIGN       reduce using rule 18 (constant -> CHARACTER .)
    EQUALS          reduce using rule 18 (constant -> CHARACTER .)
    SEMI_COLON      reduce using rule 18 (constant -> CHARACTER .)


state 5

    (9) type -> CHAR .

    VARIABLE        reduce using rule 9 (type -> CHAR .)


state 6

    (43) exp -> constant .

    ADD             reduce using rule 43 (exp -> constant .)
    MINUS           reduce using rule 43 (exp -> constant .)
    MULT            reduce using rule 43 (exp -> constant .)
    DIV             reduce using rule 43 (exp -> constant .)
    MOD             reduce using rule 43 (exp -> constant .)
    L_OP            reduce using rule 43 (exp -> constant .)
    G_OP            reduce using rule 43 (exp -> constant .)
    LE_OP           reduce using rule 43 (exp -> constant .)
    GE_OP           reduce using rule 43 (exp -> constant .)
    NOTEQUALS       reduce using rule 43 (exp -> constant .)
    EQUALS_OP       reduce using rule 43 (exp -> constant .)
    OR_OP           reduce using rule 43 (exp -> constant .)
    AND_OP          reduce using rule 43 (exp -> constant .)
    MUL_ASSIGN      reduce using rule 43 (exp -> constant .)
    DIV_ASSIGN      reduce using rule 43 (exp -> constant .)
    MOD_ASSIGN      reduce using rule 43 (exp -> constant .)
    AND_ASSIGN      reduce using rule 43 (exp -> constant .)
    SUB_ASSIGN      reduce using rule 43 (exp -> constant .)
    LEFT_ASSIGN     reduce using rule 43 (exp -> constant .)
    RIGHT_ASSIGN    reduce using rule 43 (exp -> constant .)
    XOR_ASSIGN      reduce using rule 43 (exp -> constant .)
    OR_ASSIGN       reduce using rule 43 (exp -> constant .)
    EQUALS          reduce using rule 43 (exp -> constant .)
    SEMI_COLON      reduce using rule 43 (exp -> constant .)


state 7

    (16) constant -> EXP_REAL .

    ADD             reduce using rule 16 (constant -> EXP_REAL .)
    MINUS           reduce using rule 16 (constant -> EXP_REAL .)
    MULT            reduce using rule 16 (constant -> EXP_REAL .)
    DIV             reduce using rule 16 (constant -> EXP_REAL .)
    MOD             reduce using rule 16 (constant -> EXP_REAL .)
    L_OP            reduce using rule 16 (constant -> EXP_REAL .)
    G_OP            reduce using rule 16 (constant -> EXP_REAL .)
    LE_OP           reduce using rule 16 (constant -> EXP_REAL .)
    GE_OP           reduce using rule 16 (constant -> EXP_REAL .)
    NOTEQUALS       reduce using rule 16 (constant -> EXP_REAL .)
    EQUALS_OP       reduce using rule 16 (constant -> EXP_REAL .)
    OR_OP           reduce using rule 16 (constant -> EXP_REAL .)
    AND_OP          reduce using rule 16 (constant -> EXP_REAL .)
    MUL_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    DIV_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    MOD_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    AND_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    SUB_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    LEFT_ASSIGN     reduce using rule 16 (constant -> EXP_REAL .)
    RIGHT_ASSIGN    reduce using rule 16 (constant -> EXP_REAL .)
    XOR_ASSIGN      reduce using rule 16 (constant -> EXP_REAL .)
    OR_ASSIGN       reduce using rule 16 (constant -> EXP_REAL .)
    EQUALS          reduce using rule 16 (constant -> EXP_REAL .)
    SEMI_COLON      reduce using rule 16 (constant -> EXP_REAL .)


state 8

    (17) constant -> DEC_INT .

    ADD             reduce using rule 17 (constant -> DEC_INT .)
    MINUS           reduce using rule 17 (constant -> DEC_INT .)
    MULT            reduce using rule 17 (constant -> DEC_INT .)
    DIV             reduce using rule 17 (constant -> DEC_INT .)
    MOD             reduce using rule 17 (constant -> DEC_INT .)
    L_OP            reduce using rule 17 (constant -> DEC_INT .)
    G_OP            reduce using rule 17 (constant -> DEC_INT .)
    LE_OP           reduce using rule 17 (constant -> DEC_INT .)
    GE_OP           reduce using rule 17 (constant -> DEC_INT .)
    NOTEQUALS       reduce using rule 17 (constant -> DEC_INT .)
    EQUALS_OP       reduce using rule 17 (constant -> DEC_INT .)
    OR_OP           reduce using rule 17 (constant -> DEC_INT .)
    AND_OP          reduce using rule 17 (constant -> DEC_INT .)
    MUL_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    DIV_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    MOD_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    AND_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    SUB_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    LEFT_ASSIGN     reduce using rule 17 (constant -> DEC_INT .)
    RIGHT_ASSIGN    reduce using rule 17 (constant -> DEC_INT .)
    XOR_ASSIGN      reduce using rule 17 (constant -> DEC_INT .)
    OR_ASSIGN       reduce using rule 17 (constant -> DEC_INT .)
    EQUALS          reduce using rule 17 (constant -> DEC_INT .)
    SEMI_COLON      reduce using rule 17 (constant -> DEC_INT .)


state 9

    (2) statements -> statement .

    INT             reduce using rule 2 (statements -> statement .)
    FLOAT           reduce using rule 2 (statements -> statement .)
    CHAR            reduce using rule 2 (statements -> statement .)
    DOUBLE          reduce using rule 2 (statements -> statement .)
    VOID            reduce using rule 2 (statements -> statement .)
    SHORT           reduce using rule 2 (statements -> statement .)
    LONG            reduce using rule 2 (statements -> statement .)
    HEX_INT         reduce using rule 2 (statements -> statement .)
    DOT_REAL        reduce using rule 2 (statements -> statement .)
    EXP_REAL        reduce using rule 2 (statements -> statement .)
    DEC_INT         reduce using rule 2 (statements -> statement .)
    CHARACTER       reduce using rule 2 (statements -> statement .)
    VARIABLE        reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 10

    (15) constant -> DOT_REAL .

    ADD             reduce using rule 15 (constant -> DOT_REAL .)
    MINUS           reduce using rule 15 (constant -> DOT_REAL .)
    MULT            reduce using rule 15 (constant -> DOT_REAL .)
    DIV             reduce using rule 15 (constant -> DOT_REAL .)
    MOD             reduce using rule 15 (constant -> DOT_REAL .)
    L_OP            reduce using rule 15 (constant -> DOT_REAL .)
    G_OP            reduce using rule 15 (constant -> DOT_REAL .)
    LE_OP           reduce using rule 15 (constant -> DOT_REAL .)
    GE_OP           reduce using rule 15 (constant -> DOT_REAL .)
    NOTEQUALS       reduce using rule 15 (constant -> DOT_REAL .)
    EQUALS_OP       reduce using rule 15 (constant -> DOT_REAL .)
    OR_OP           reduce using rule 15 (constant -> DOT_REAL .)
    AND_OP          reduce using rule 15 (constant -> DOT_REAL .)
    MUL_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    DIV_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    MOD_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    AND_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    SUB_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    LEFT_ASSIGN     reduce using rule 15 (constant -> DOT_REAL .)
    RIGHT_ASSIGN    reduce using rule 15 (constant -> DOT_REAL .)
    XOR_ASSIGN      reduce using rule 15 (constant -> DOT_REAL .)
    OR_ASSIGN       reduce using rule 15 (constant -> DOT_REAL .)
    EQUALS          reduce using rule 15 (constant -> DOT_REAL .)
    SEMI_COLON      reduce using rule 15 (constant -> DOT_REAL .)


state 11

    (5) declaration -> type . VARIABLE SEMI_COLON
    (6) declaration -> type . VARIABLE EQUALS exp SEMI_COLON

    VARIABLE        shift and go to state 21


state 12

    (3) statement -> declaration .

    INT             reduce using rule 3 (statement -> declaration .)
    FLOAT           reduce using rule 3 (statement -> declaration .)
    CHAR            reduce using rule 3 (statement -> declaration .)
    DOUBLE          reduce using rule 3 (statement -> declaration .)
    VOID            reduce using rule 3 (statement -> declaration .)
    SHORT           reduce using rule 3 (statement -> declaration .)
    LONG            reduce using rule 3 (statement -> declaration .)
    HEX_INT         reduce using rule 3 (statement -> declaration .)
    DOT_REAL        reduce using rule 3 (statement -> declaration .)
    EXP_REAL        reduce using rule 3 (statement -> declaration .)
    DEC_INT         reduce using rule 3 (statement -> declaration .)
    CHARACTER       reduce using rule 3 (statement -> declaration .)
    VARIABLE        reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)


state 13

    (19) constant -> VARIABLE .

    ADD             reduce using rule 19 (constant -> VARIABLE .)
    MINUS           reduce using rule 19 (constant -> VARIABLE .)
    MULT            reduce using rule 19 (constant -> VARIABLE .)
    DIV             reduce using rule 19 (constant -> VARIABLE .)
    MOD             reduce using rule 19 (constant -> VARIABLE .)
    L_OP            reduce using rule 19 (constant -> VARIABLE .)
    G_OP            reduce using rule 19 (constant -> VARIABLE .)
    LE_OP           reduce using rule 19 (constant -> VARIABLE .)
    GE_OP           reduce using rule 19 (constant -> VARIABLE .)
    NOTEQUALS       reduce using rule 19 (constant -> VARIABLE .)
    EQUALS_OP       reduce using rule 19 (constant -> VARIABLE .)
    OR_OP           reduce using rule 19 (constant -> VARIABLE .)
    AND_OP          reduce using rule 19 (constant -> VARIABLE .)
    MUL_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    DIV_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    MOD_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    AND_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    SUB_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    LEFT_ASSIGN     reduce using rule 19 (constant -> VARIABLE .)
    RIGHT_ASSIGN    reduce using rule 19 (constant -> VARIABLE .)
    XOR_ASSIGN      reduce using rule 19 (constant -> VARIABLE .)
    OR_ASSIGN       reduce using rule 19 (constant -> VARIABLE .)
    EQUALS          reduce using rule 19 (constant -> VARIABLE .)
    SEMI_COLON      reduce using rule 19 (constant -> VARIABLE .)


state 14

    (7) type -> INT .

    VARIABLE        reduce using rule 7 (type -> INT .)


state 15

    (10) type -> DOUBLE .

    VARIABLE        reduce using rule 10 (type -> DOUBLE .)


state 16

    (14) constant -> HEX_INT .

    ADD             reduce using rule 14 (constant -> HEX_INT .)
    MINUS           reduce using rule 14 (constant -> HEX_INT .)
    MULT            reduce using rule 14 (constant -> HEX_INT .)
    DIV             reduce using rule 14 (constant -> HEX_INT .)
    MOD             reduce using rule 14 (constant -> HEX_INT .)
    L_OP            reduce using rule 14 (constant -> HEX_INT .)
    G_OP            reduce using rule 14 (constant -> HEX_INT .)
    LE_OP           reduce using rule 14 (constant -> HEX_INT .)
    GE_OP           reduce using rule 14 (constant -> HEX_INT .)
    NOTEQUALS       reduce using rule 14 (constant -> HEX_INT .)
    EQUALS_OP       reduce using rule 14 (constant -> HEX_INT .)
    OR_OP           reduce using rule 14 (constant -> HEX_INT .)
    AND_OP          reduce using rule 14 (constant -> HEX_INT .)
    MUL_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    DIV_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    MOD_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    AND_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    SUB_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    LEFT_ASSIGN     reduce using rule 14 (constant -> HEX_INT .)
    RIGHT_ASSIGN    reduce using rule 14 (constant -> HEX_INT .)
    XOR_ASSIGN      reduce using rule 14 (constant -> HEX_INT .)
    OR_ASSIGN       reduce using rule 14 (constant -> HEX_INT .)
    EQUALS          reduce using rule 14 (constant -> HEX_INT .)
    SEMI_COLON      reduce using rule 14 (constant -> HEX_INT .)


state 17

    (8) type -> FLOAT .

    VARIABLE        reduce using rule 8 (type -> FLOAT .)


state 18

    (4) statement -> exp . SEMI_COLON
    (20) exp -> exp . ADD exp
    (21) exp -> exp . MINUS exp
    (22) exp -> exp . MULT exp
    (23) exp -> exp . DIV exp
    (24) exp -> exp . MOD exp
    (25) exp -> exp . L_OP exp
    (26) exp -> exp . G_OP exp
    (27) exp -> exp . LE_OP exp
    (28) exp -> exp . GE_OP exp
    (29) exp -> exp . NOTEQUALS exp
    (30) exp -> exp . EQUALS_OP exp
    (31) exp -> exp . OR_OP exp
    (32) exp -> exp . AND_OP exp
    (33) exp -> exp . MUL_ASSIGN exp
    (34) exp -> exp . DIV_ASSIGN exp
    (35) exp -> exp . MOD_ASSIGN exp
    (36) exp -> exp . AND_ASSIGN exp
    (37) exp -> exp . SUB_ASSIGN exp
    (38) exp -> exp . LEFT_ASSIGN exp
    (39) exp -> exp . RIGHT_ASSIGN exp
    (40) exp -> exp . XOR_ASSIGN exp
    (41) exp -> exp . OR_ASSIGN exp
    (42) exp -> exp . EQUALS exp
